spec/e2e/call/bool.lit
true(); # error: [line 1] Can only call functions.
